# ScalarHackathon

./: .gitignore  Dockerfile  Meta OpenEnv Hackathon_ Guidelines.txt  README.md  app.py  deploy_to_hf.py  inference.py  openenv.yaml  pre_submission_check.py  pyproject.toml  requirements.txt  test_exploit_and_variance.py  test_models.py  validate_tasks.py  verify_typed_live.py
.github/workflows/: docker-build.yml
server/: __init__.py  app.py  environment.py  grader.py  main.py  models.py  tasks.py
