[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codedebugger-rl-env"
version = "1.0.0"
description = "An RL environment for Python code debugging — Meta OpenEnv Hackathon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.1.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "requests",
    "pyyaml",
]
